--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <body>
 
 <div class="card">
-    <h2>Nirali, will you be my valentine?</h2>
+    <h2>Avantika, will you be my valentine?</h2>
 
     <button id="yesBtn" class="btn">Yes</button>
     <button id="noBtn" class="btn">No</button>
