--- a/index.html
+++ b/index.html
@@ -6,111 +6,123 @@
 <title>Will you be my Valentine?</title>
 
 <style>
-    body {
-        margin: 0;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: #ffd6e7;
+    body{
+        margin:0;
+        height:100vh;
+        display:flex;
+        justify-content:center;
+        align-items:center;
+        background:#ffd6e7;
         font-family: Arial, Helvetica, sans-serif;
     }
 
-    .card {
-        background: white;
-        width: 350px;
-        padding: 30px;
-        border-radius: 15px;
-        text-align: center;
-        box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-        position: relative;
-        overflow: hidden;
+    .card{
+        background:white;
+        width:420px;
+        max-width:90%;
+        padding:40px 30px;
+        border-radius:20px;
+        text-align:center;
+        box-shadow:0 15px 40px rgba(0,0,0,0.2);
+        position:relative;
     }
 
-    h2 {
-        margin-bottom: 25px;
+    h2{
+        margin-bottom:30px;
+        font-size:26px;
     }
 
-    .btn {
-        padding: 10px 25px;
-        border: none;
-        border-radius: 20px;
-        font-size: 16px;
-        cursor: pointer;
-        margin: 10px;
-        position: absolute;
-        transition: 0.2s;
+    .btn-group{
+        display:flex;
+        justify-content:center;
+        gap:20px;
+        margin-top:20px;
+        position:relative;
+        height:60px;
     }
 
-    #yesBtn {
-        background: #ff4d79;
-        color: white;
-        left: 70px;
-        bottom: 40px;
+    .btn{
+        padding:12px 30px;
+        border:none;
+        border-radius:25px;
+        font-size:16px;
+        cursor:pointer;
+        transition:0.2s;
+        position:relative;
     }
 
-    #noBtn {
-        background: #eee;
-        left: 200px;
-        bottom: 40px;
+    #yesBtn{
+        background:#ff4d79;
+        color:white;
     }
 
-    #yay {
-        font-size: 30px;
-        margin-top: 20px;
-        display: none;
-        color: #ff4d79;
-        font-weight: bold;
+    #noBtn{
+        background:#eee;
     }
 
-    #emoji {
-        font-size: 60px;
-        display: none;
-        animation: pop 0.6s ease forwards;
+    #yay{
+        margin-top:25px;
+        font-size:28px;
+        color:#ff4d79;
+        font-weight:bold;
+        display:none;
     }
 
-    @keyframes pop {
-        0% { transform: scale(0); opacity: 0; }
-        100% { transform: scale(1); opacity: 1; }
+    #emoji{
+        font-size:60px;
+        display:none;
+        animation:pop 0.6s ease forwards;
+    }
+
+    @keyframes pop{
+        0%{transform:scale(0);opacity:0;}
+        100%{transform:scale(1);opacity:1;}
     }
 </style>
 </head>
+
 <body>
 
 <div class="card">
-    <h2>Avantika, will you be my valentine?</h2>
+    <h2>Avantika, will you be my Valentine?</h2>
 
-    <button id="yesBtn" class="btn">Yes</button>
-    <button id="noBtn" class="btn">No</button>
+    <div class="btn-group">
+        <button id="yesBtn" class="btn">Yes</button>
+        <button id="noBtn" class="btn">No</button>
+    </div>
 
     <div id="yay">YAY 🎊</div>
     <div id="emoji">💖😍🥰</div>
 </div>
 
 <script>
-    const noBtn = document.getElementById("noBtn");
-    const yesBtn = document.getElementById("yesBtn");
-    const yay = document.getElementById("yay");
-    const emoji = document.getElementById("emoji");
+const noBtn = document.getElementById("noBtn");
+const yesBtn = document.getElementById("yesBtn");
+const yay = document.getElementById("yay");
+const emoji = document.getElementById("emoji");
+const card = document.querySelector(".card");
 
-    // Move NO button on hover
-    noBtn.addEventListener("mouseover", () => {
-        const card = document.querySelector(".card");
-        const maxX = card.clientWidth - noBtn.offsetWidth;
-        const maxY = card.clientHeight - noBtn.offsetHeight;
+// Move NO button randomly inside card
+noBtn.addEventListener("mouseover", () => {
+    const cardRect = card.getBoundingClientRect();
+    const btnRect = noBtn.getBoundingClientRect();
 
-        const randomX = Math.floor(Math.random() * maxX);
-        const randomY = Math.floor(Math.random() * maxY);
+    const maxX = cardRect.width - btnRect.width - 20;
+    const maxY = cardRect.height - btnRect.height - 20;
 
-        noBtn.style.left = randomX + "px";
-        noBtn.style.bottom = randomY + "px";
-    });
+    const x = Math.random() * maxX;
+    const y = Math.random() * maxY;
 
-    // YES button click
-    yesBtn.addEventListener("click", () => {
-        yay.style.display = "block";
-        emoji.style.display = "block";
-    });
+    noBtn.style.position = "absolute";
+    noBtn.style.left = x + "px";
+    noBtn.style.top = y + "px";
+});
+
+// YES click
+yesBtn.addEventListener("click", () => {
+    yay.style.display = "block";
+    emoji.style.display = "block";
+});
 </script>
 
 </body>
