--- a/index.html
+++ b/index.html
@@ -6,87 +6,116 @@
 <title>Will you be my Valentine?</title>
 
 <style>
-    body{
-        margin:0;
-        height:100vh;
-        display:flex;
-        justify-content:center;
-        align-items:center;
-        background:#ffd6e7;
-        font-family: Arial, Helvetica, sans-serif;
-    }
+body{
+    margin:0;
+    height:100vh;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    background:#ffd6e7;
+    font-family: Arial, Helvetica, sans-serif;
+    overflow:hidden;
+}
 
-    .card{
-        background:white;
-        width:420px;
-        max-width:90%;
-        padding:40px 30px;
-        border-radius:20px;
-        text-align:center;
-        box-shadow:0 15px 40px rgba(0,0,0,0.2);
-        position:relative;
+/* Floating hearts */
+.hearts{
+    position:fixed;
+    inset:0;
+    overflow:hidden;
+    z-index:0;
+    pointer-events:none;
+}
+.heart{
+    position:absolute;
+    bottom:-40px;
+    font-size:24px;
+    animation:floatUp linear infinite;
+}
+@keyframes floatUp{
+    to{
+        transform:translateY(-110vh);
+        opacity:0;
     }
+}
 
-    h2{
-        margin-bottom:30px;
-        font-size:26px;
-    }
+/* Card */
+.card{
+    background:white;
+    width:420px;
+    max-width:90%;
+    padding:40px 30px 110px;
+    border-radius:20px;
+    text-align:center;
+    box-shadow:0 15px 40px rgba(0,0,0,0.2);
+    position:relative;
+    z-index:1;
+}
 
-    .btn-group{
-        display:flex;
-        justify-content:center;
-        gap:20px;
-        margin-top:20px;
-        position:relative;
-        height:60px;
-    }
+h2{
+    margin-bottom:25px;
+    font-size:26px;
+}
 
-    .btn{
-        padding:12px 30px;
-        border:none;
-        border-radius:25px;
-        font-size:16px;
-        cursor:pointer;
-        transition:0.2s;
-        position:relative;
-    }
+/* Button zone */
+.btn-zone{
+    position:absolute;
+    left:0;
+    right:0;
+    bottom:25px;
+    height:70px;
+}
 
-    #yesBtn{
-        background:#ff4d79;
-        color:white;
-    }
+/* Buttons */
+.btn{
+    padding:12px 28px;
+    border:none;
+    border-radius:25px;
+    font-size:16px;
+    cursor:pointer;
+    position:absolute;
+}
 
-    #noBtn{
-        background:#eee;
-    }
+#yesBtn{
+    background:#ff4d79;
+    color:white;
+    left:30%;
+}
 
-    #yay{
-        margin-top:25px;
-        font-size:28px;
-        color:#ff4d79;
-        font-weight:bold;
-        display:none;
-    }
+#noBtn{
+    background:#eee;
+    right:30%;
+}
 
-    #emoji{
-        font-size:60px;
-        display:none;
-        animation:pop 0.6s ease forwards;
-    }
+/* Celebration */
+#yay{
+    margin-top:20px;
+    font-size:28px;
+    color:#ff4d79;
+    font-weight:bold;
+    display:none;
+}
 
-    @keyframes pop{
-        0%{transform:scale(0);opacity:0;}
-        100%{transform:scale(1);opacity:1;}
-    }
+#emoji{
+    font-size:60px;
+    display:none;
+    animation:pop .6s ease forwards;
+}
+
+@keyframes pop{
+    from{transform:scale(0);opacity:0;}
+    to{transform:scale(1);opacity:1;}
+}
 </style>
 </head>
 
 <body>
 
+<div class="hearts" id="hearts"></div>
+
 <div class="card">
     <h2>Avantika, will you be my Valentine?</h2>
 
-    <div class="btn-group">
+    <div class="btn-zone" id="zone">
         <button id="yesBtn" class="btn">Yes</button>
         <button id="noBtn" class="btn">No</button>
     </div>
@@ -96,32 +125,46 @@
 </div>
 
 <script>
-const noBtn = document.getElementById("noBtn");
-const yesBtn = document.getElementById("yesBtn");
-const yay = document.getElementById("yay");
-const emoji = document.getElementById("emoji");
-const card = document.querySelector(".card");
+// Floating hearts
+const hearts = document.getElementById("hearts");
+function createHeart(){
+    const h=document.createElement("div");
+    h.className="heart";
+    h.innerText="💖";
+    h.style.left=Math.random()*100+"vw";
+    h.style.animationDuration=(3+Math.random()*3)+"s";
+    h.style.fontSize=(20+Math.random()*30)+"px";
+    hearts.appendChild(h);
+    setTimeout(()=>h.remove(),6000);
+}
+setInterval(createHeart,300);
 
-// Move NO button randomly inside card
-noBtn.addEventListener("mouseover", () => {
-    const cardRect = card.getBoundingClientRect();
-    const btnRect = noBtn.getBoundingClientRect();
+// Buttons
+const noBtn=document.getElementById("noBtn");
+const yesBtn=document.getElementById("yesBtn");
+const yay=document.getElementById("yay");
+const emoji=document.getElementById("emoji");
+const zone=document.getElementById("zone");
 
-    const maxX = cardRect.width - btnRect.width - 20;
-    const maxY = cardRect.height - btnRect.height - 20;
+// Move NO inside zone only
+noBtn.addEventListener("mouseover",()=>{
+    const z=zone.getBoundingClientRect();
+    const b=noBtn.getBoundingClientRect();
 
-    const x = Math.random() * maxX;
-    const y = Math.random() * maxY;
+    const maxX=z.width-b.width-10;
+    const maxY=z.height-b.height-10;
 
-    noBtn.style.position = "absolute";
-    noBtn.style.left = x + "px";
-    noBtn.style.top = y + "px";
+    const x=Math.random()*maxX;
+    const y=Math.random()*maxY;
+
+    noBtn.style.left=x+"px";
+    noBtn.style.top=y+"px";
 });
 
 // YES click
-yesBtn.addEventListener("click", () => {
-    yay.style.display = "block";
-    emoji.style.display = "block";
+yesBtn.addEventListener("click",()=>{
+    yay.style.display="block";
+    emoji.style.display="block";
 });
 </script>
 
