--- a/index.html
+++ b/index.html
@@ -1,171 +1,94 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Will you be my Valentine?</title>
+<meta charset="UTF-8">
+<title>Valentine</title>
 
 <style>
 body{
-    margin:0;
-    height:100vh;
+    font-family: Arial;
     display:flex;
     justify-content:center;
     align-items:center;
-    background:#ffd6e7;
-    font-family: Arial, Helvetica, sans-serif;
-    overflow:hidden;
+    height:100vh;
+    background:#fff;
 }
 
-/* Floating hearts */
-.hearts{
-    position:fixed;
-    inset:0;
-    overflow:hidden;
-    z-index:0;
-    pointer-events:none;
-}
-.heart{
-    position:absolute;
-    bottom:-40px;
-    font-size:24px;
-    animation:floatUp linear infinite;
-}
-@keyframes floatUp{
-    to{
-        transform:translateY(-110vh);
-        opacity:0;
-    }
-}
-
-/* Card */
 .card{
     background:white;
-    width:420px;
-    max-width:90%;
-    padding:40px 30px 110px;
+    padding:40px;
     border-radius:20px;
     text-align:center;
-    box-shadow:0 15px 40px rgba(0,0,0,0.2);
-    position:relative;
-    z-index:1;
+    box-shadow:0 10px 30px rgba(0,0,0,0.1);
 }
 
-h2{
-    margin-bottom:25px;
-    font-size:26px;
-}
-
-/* Button zone */
-.btn-zone{
-    position:absolute;
-    left:0;
-    right:0;
-    bottom:25px;
-    height:70px;
-}
-
-/* Buttons */
-.btn{
-    padding:12px 28px;
+button{
+    padding:15px 30px;
     border:none;
-    border-radius:25px;
-    font-size:16px;
+    border-radius:30px;
+    margin:10px;
+    font-size:18px;
     cursor:pointer;
-    position:absolute;
 }
 
-#yesBtn{
-    background:#ff4d79;
-    color:white;
-    left:30%;
-}
+#yesBtn{ background:#ff2e74; color:white; }
+#noBtn{ background:#ffd1df; }
 
-#noBtn{
-    background:#eee;
-    right:30%;
-}
-
-/* Celebration */
-#yay{
-    margin-top:20px;
-    font-size:28px;
-    color:#ff4d79;
-    font-weight:bold;
+#finalCard{
     display:none;
 }
 
-#emoji{
-    font-size:60px;
-    display:none;
-    animation:pop .6s ease forwards;
-}
-
-@keyframes pop{
-    from{transform:scale(0);opacity:0;}
-    to{transform:scale(1);opacity:1;}
+img{
+    width:260px;
+    border-radius:15px;
 }
 </style>
 </head>
 
 <body>
 
-<div class="hearts" id="hearts"></div>
+<!-- FIRST CARD -->
+<div class="card" id="firstCard">
+    <h2>Will you be my Valentine? 💖</h2>
+    <p>Choose wisely...</p>
 
-<div class="card">
-    <h2>Avantika, will you be my Valentine?</h2>
+    <button id="yesBtn">YES 💕</button>
+    <button id="noBtn">NO</button>
+</div>
 
-    <div class="btn-zone" id="zone">
-        <button id="yesBtn" class="btn">Yes</button>
-        <button id="noBtn" class="btn">No</button>
-    </div>
+<!-- FINAL CARD -->
+<div class="card" id="finalCard">
+    <h2>I knew it! 🎉</h2>
 
-    <div id="yay">YAY 🎊</div>
-    <div id="emoji">💖😍🥰</div>
+    <!-- Sticker / gif -->
+    <img src="https://media.giphy.com/media/5GoVLqeAOo6PK/giphy.gif">
+
+    <h3>
+        Congratulations! You are now officially  
+        <br><b>Ashish's Valentine ❤️</b>
+        <br>forever and always! 🎊
+    </h3>
+
+    <p>(I mean, we both knew you'd say yes eventually 😉)</p>
 </div>
 
 <script>
-// Floating hearts
-const hearts = document.getElementById("hearts");
-function createHeart(){
-    const h=document.createElement("div");
-    h.className="heart";
-    h.innerText="💖";
-    h.style.left=Math.random()*100+"vw";
-    h.style.animationDuration=(3+Math.random()*3)+"s";
-    h.style.fontSize=(20+Math.random()*30)+"px";
-    hearts.appendChild(h);
-    setTimeout(()=>h.remove(),6000);
-}
-setInterval(createHeart,300);
+const yesBtn = document.getElementById("yesBtn");
+const noBtn = document.getElementById("noBtn");
 
-// Buttons
-const noBtn=document.getElementById("noBtn");
-const yesBtn=document.getElementById("yesBtn");
-const yay=document.getElementById("yay");
-const emoji=document.getElementById("emoji");
-const zone=document.getElementById("zone");
+yesBtn.onclick = function(){
+    document.getElementById("firstCard").style.display="none";
+    document.getElementById("finalCard").style.display="block";
+};
 
-// Move NO inside zone only
-noBtn.addEventListener("mouseover",()=>{
-    const z=zone.getBoundingClientRect();
-    const b=noBtn.getBoundingClientRect();
-
-    const maxX=z.width-b.width-10;
-    const maxY=z.height-b.height-10;
-
-    const x=Math.random()*maxX;
-    const y=Math.random()*maxY;
-
+/* NO button escape */
+noBtn.onmouseover = function(){
+    const x = Math.random()*400;
+    const y = Math.random()*300;
+    noBtn.style.position="absolute";
     noBtn.style.left=x+"px";
     noBtn.style.top=y+"px";
-});
-
-// YES click
-yesBtn.addEventListener("click",()=>{
-    yay.style.display="block";
-    emoji.style.display="block";
-});
+};
 </script>
 
 </body>
