--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ body{
     align-items:center;
     height:100vh;
     background:#fff;
+    overflow:hidden;
 }
 
 .card{
@@ -20,6 +21,7 @@ body{
     border-radius:20px;
     text-align:center;
     box-shadow:0 10px 30px rgba(0,0,0,0.1);
+    z-index:10;
 }
 
 button{
@@ -34,13 +36,20 @@ button{
 #yesBtn{ background:#ff2e74; color:white; }
 #noBtn{ background:#ffd1df; }
 
-#finalCard{
-    display:none;
+#finalCard{ display:none; }
+
+img{ width:260px; border-radius:15px; }
+
+/* HEARTS */
+.heart{
+    position:absolute;
+    color:#ff2e74;
+    animation: float 6s linear infinite;
 }
 
-img{
-    width:260px;
-    border-radius:15px;
+@keyframes float{
+    0%{ transform:translateY(100vh); opacity:1; }
+    100%{ transform:translateY(-10vh); opacity:0; }
 }
 </style>
 </head>
@@ -60,7 +69,6 @@ img{
 <div class="card" id="finalCard">
     <h2>I knew it! 🎉</h2>
 
-    <!-- Sticker / gif -->
     <img src="https://media.giphy.com/media/5GoVLqeAOo6PK/giphy.gif">
 
     <h3>
@@ -68,8 +76,6 @@ img{
         <br><b>Ashish's Valentine ❤️</b>
         <br>forever and always! 🎊
     </h3>
-
-    <p>(I mean, we both knew you'd say yes eventually 😉)</p>
 </div>
 
 <script>
@@ -89,6 +95,18 @@ noBtn.onmouseover = function(){
     noBtn.style.left=x+"px";
     noBtn.style.top=y+"px";
 };
+
+/* BACKGROUND FLOATING HEARTS */
+setInterval(()=>{
+    const heart = document.createElement("div");
+    heart.className="heart";
+    heart.innerHTML="💖";
+    heart.style.left=Math.random()*100+"vw";
+    heart.style.fontSize=(20+Math.random()*25)+"px";
+    document.body.appendChild(heart);
+    setTimeout(()=>heart.remove(),6000);
+},400);
+
 </script>
 
 </body>
