--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@ body{
     justify-content:center;
     align-items:center;
     height:100vh;
-    background:#fff;
     overflow:hidden;
+    background:white;
+    transition:1s;
 }
 
 .card{
@@ -21,7 +22,7 @@ body{
     border-radius:20px;
     text-align:center;
     box-shadow:0 10px 30px rgba(0,0,0,0.1);
-    z-index:10;
+    z-index:5;
 }
 
 button{
@@ -31,82 +32,97 @@ button{
     margin:10px;
     font-size:18px;
     cursor:pointer;
+    transition:0.3s;
 }
 
 #yesBtn{ background:#ff2e74; color:white; }
 #noBtn{ background:#ffd1df; }
 
-#finalCard{ display:none; }
-
-img{ width:260px; border-radius:15px; }
-
-/* HEARTS */
-.heart{
-    position:absolute;
-    color:#ff2e74;
-    animation: float 6s linear infinite;
+#final{
+    display:none;
+    font-size:40px;
+    color:white;
+    font-weight:bold;
 }
 
-@keyframes float{
-    0%{ transform:translateY(100vh); opacity:1; }
-    100%{ transform:translateY(-10vh); opacity:0; }
+.heart{
+    position:absolute;
+    color:white;
+    animation: explode 2s linear forwards;
+}
+
+@keyframes explode{
+    0%{ transform:translate(0,0); opacity:1; }
+    100%{ transform:translate(var(--x),var(--y)); opacity:0; }
 }
 </style>
 </head>
 
 <body>
 
-<!-- FIRST CARD -->
-<div class="card" id="firstCard">
-    <h2>Will you be my Valentine? 💖</h2>
-    <p>Choose wisely...</p>
-
-    <button id="yesBtn">YES 💕</button>
-    <button id="noBtn">NO</button>
+<div class="card" id="card">
+<h2>Will you be my Valentine? 💖</h2>
+<button id="yesBtn">YES 💕</button>
+<button id="noBtn">NO</button>
 </div>
 
-<!-- FINAL CARD -->
-<div class="card" id="finalCard">
-    <h2>I knew it! 🎉</h2>
-
-    <img src="https://media.giphy.com/media/5GoVLqeAOo6PK/giphy.gif">
-
-    <h3>
-        Congratulations! You are now officially  
-        <br><b>Ashish's Valentine ❤️</b>
-        <br>forever and always! 🎊
-    </h3>
-</div>
+<div id="final"></div>
 
 <script>
-const yesBtn = document.getElementById("yesBtn");
-const noBtn = document.getElementById("noBtn");
+let yesScale=1;
+let noScale=1;
 
-yesBtn.onclick = function(){
-    document.getElementById("firstCard").style.display="none";
-    document.getElementById("finalCard").style.display="block";
+const yes=document.getElementById("yesBtn");
+const no=document.getElementById("noBtn");
+
+/* hover */
+no.onmouseover=()=>{
+    no.style.position="absolute";
+    no.style.left=Math.random()*500+"px";
+    no.style.top=Math.random()*300+"px";
+
+    noScale-=0.1;
+    yesScale+=0.15;
+
+    no.style.transform=`scale(${noScale})`;
+    yes.style.transform=`scale(${yesScale})`;
 };
 
-/* NO button escape */
-noBtn.onmouseover = function(){
-    const x = Math.random()*400;
-    const y = Math.random()*300;
-    noBtn.style.position="absolute";
-    noBtn.style.left=x+"px";
-    noBtn.style.top=y+"px";
+/* YES click */
+yes.onclick=()=>{
+    document.body.style.background="linear-gradient(45deg,#ff2e74,#ff6fa5)";
+    document.getElementById("card").style.display="none";
+    const final=document.getElementById("final");
+    final.style.display="block";
+    typeText();
+    explodeHearts();
 };
 
-/* BACKGROUND FLOATING HEARTS */
-setInterval(()=>{
-    const heart = document.createElement("div");
-    heart.className="heart";
-    heart.innerHTML="💖";
-    heart.style.left=Math.random()*100+"vw";
-    heart.style.fontSize=(20+Math.random()*25)+"px";
-    document.body.appendChild(heart);
-    setTimeout(()=>heart.remove(),6000);
-},400);
+/* typing */
+function typeText(){
+    const text="I Love You ❤️";
+    let i=0;
+    const t=setInterval(()=>{
+        document.getElementById("final").innerHTML+=text[i];
+        i++;
+        if(i>=text.length) clearInterval(t);
+    },100);
+}
 
+/* heart explosion */
+function explodeHearts(){
+    for(let i=0;i<40;i++){
+        const h=document.createElement("div");
+        h.className="heart";
+        h.innerHTML="💖";
+        h.style.left="50%";
+        h.style.top="50%";
+        h.style.setProperty('--x',(Math.random()*600-300)+"px");
+        h.style.setProperty('--y',(Math.random()*600-300)+"px");
+        document.body.appendChild(h);
+        setTimeout(()=>h.remove(),2000);
+    }
+}
 </script>
 
 </body>
