--- a/index.html
+++ b/index.html
@@ -1,145 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Valentine</title>
-
-<style>
-body{
-    font-family: Arial;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:100vh;
-    overflow:hidden;
-    background:white;
-    transition:1s;
-}
-
-/* card */
-.card{
-    background:white;
-    padding:40px;
-    border-radius:20px;
-    text-align:center;
-    box-shadow:0 10px 30px rgba(0,0,0,0.1);
-    z-index:10;
-}
-
-/* buttons */
-button{
-    padding:15px 30px;
-    border:none;
-    border-radius:30px;
-    margin:10px;
-    font-size:18px;
-    cursor:pointer;
-    transition:0.3s;
-}
-
-#yesBtn{ background:#ff2e74; color:white; }
-#noBtn{ background:#ffd1df; }
-
-/* floating hearts */
-.floatHeart{
-    position:absolute;
-    color:#ff2e74;
-    animation: float 6s linear infinite;
-}
-
-@keyframes float{
-    from{ transform:translateY(100vh); }
-    to{ transform:translateY(-10vh); opacity:0; }
-}
-
-#final{
-    display:none;
-    font-size:45px;
-    color:white;
-    font-weight:bold;
-    z-index:20;
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Will You Be My Valentine?</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-
-<div class="card" id="card">
-<h2>Will you be my Valentine? 💖</h2>
-<button id="yesBtn">YES 💕</button>
-<button id="noBtn">NO</button>
-</div>
-
-<div id="final"></div>
-
-<script>
-let yesScale=1;
-let noScale=1;
-
-const yes=document.getElementById("yesBtn");
-const no=document.getElementById("noBtn");
-
-/* NO escape */
-no.onmouseover=()=>{
-    no.style.position="absolute";
-    no.style.left=Math.random()*600+"px";
-    no.style.top=Math.random()*400+"px";
-
-    noScale-=0.1;
-    yesScale+=0.15;
-
-    no.style.transform=`scale(${noScale})`;
-    yes.style.transform=`scale(${yesScale})`;
-};
-
-/* YES click */
-yes.onclick=()=>{
-    document.body.style.background="linear-gradient(45deg,#ff2e74,#ff6fa5)";
-    document.getElementById("card").style.display="none";
-
-    const f=document.getElementById("final");
-    f.style.display="block";
-    typeText();
-    explode();
-};
-
-/* typing */
-function typeText(){
-    const txt="I Love You ❤️";
-    let i=0;
-    const t=setInterval(()=>{
-        document.getElementById("final").innerHTML+=txt[i];
-        i++;
-        if(i>=txt.length) clearInterval(t);
-    },100);
-}
-
-/* explosion hearts */
-function explode(){
-    for(let i=0;i<40;i++){
-        const h=document.createElement("div");
-        h.innerHTML="💖";
-        h.style.position="absolute";
-        h.style.left="50%";
-        h.style.top="50%";
-        h.style.fontSize="30px";
-        h.style.transform=`translate(${Math.random()*600-300}px,${Math.random()*600-300}px)`;
-        document.body.appendChild(h);
-        setTimeout(()=>h.remove(),1500);
-    }
-}
-
-/* background floating hearts */
-setInterval(()=>{
-    const h=document.createElement("div");
-    h.className="floatHeart";
-    h.innerHTML="💖";
-    h.style.left=Math.random()*100+"vw";
-    h.style.fontSize=(20+Math.random()*20)+"px";
-    document.body.appendChild(h);
-    setTimeout(()=>h.remove(),6000);
-},400);
-</script>
-
+    <div class="container">
+        <div class="gif_container">
+            <img src="https://gifdb.com/images/high/cute-love-bear-roses-ou7zho5oosxnpo6k.gif" alt="Cute GIF">
+        </div>
+        <h1>Will you be my Valentine?</h1>
+        <div class="buttons">
+            <button class="yes-button" onclick="handleYesClick()">Yes</button>
+            <button class="no-button" onclick="handleNoClick()">No</button>
+        </div>
+        
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
